[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain games project for hexlet"
authors = ["Timur <tim.vildanov@gmail.com>"]
readme = "README.md"
packages = [
    {include = "brain_games"},
    {include = "scripts", from  = "brain_games"},
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
